--- a/Telekomunikacije/Views/Members/MembersInfo.cshtml
+++ b/Telekomunikacije/Views/Members/MembersInfo.cshtml
@@ -1,4 +1,4 @@
-﻿@model Telekomunikacije.Models.ApplicationUser
+﻿@model Telekomunikacije.Models.EditViewModel
 @{
     ViewBag.Title = "MembersInfo";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -10,20 +10,20 @@
     <div class="form-group">
         @Html.LabelFor(x => x.UserName)
         @Html.TextBoxFor(x => x.UserName, new { @class = "form-control" })
+        @Html.ValidationMessageFor(x=>x.UserName)
+    </div>
+   
+    <div class="form-group">
+        @Html.LabelFor(x => x.Email)
+        @Html.TextBoxFor(x => x.Email, new { @class = "form-control" })
+        @Html.ValidationMessageFor(x => x.Email)
     </div>
     <div class="form-group">
         @Html.LabelFor(x => x.IndexNumber)
         @Html.TextBoxFor(x => x.IndexNumber, new { @class = "form-control" })
+        @Html.ValidationMessageFor(x => x.IndexNumber)
     </div>
-    <div class="form-group">
-        @Html.LabelFor(x => x.Email)
-        @Html.TextBoxFor(x => x.Email, new { @class = "form-control" })
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(x => x.PhoneNumber)
-        @Html.TextBoxFor(x => x.PhoneNumber, new { @class = "form-control" })
-    </div>
-    
 
-    <button type="submit" class="btn btn-primary">Sacuvajte Izmene</button>
+    @Html.HiddenFor(x=>x.Id)
+    <button type="submit" class="btn btn-primary" onclick="return confirm('Da li ste sigurni da zelite da sacuvate izmene')">Sacuvajte Izmene</button>
 }
