--- a/Telekomunikacije/Views/Shared/_Layout.cshtml
+++ b/Telekomunikacije/Views/Shared/_Layout.cshtml
@@ -9,7 +9,15 @@
 
 </head>
 <body>
-    @Html.Partial("_NavBar")
+    @if (User.IsInRole("CanDoEverything"))
+    {
+        @Html.Partial("_NavBarAdmin")
+    }
+    else
+    {
+        @Html.Partial("_NavBar")
+    }
+    
     <div class="container body-content">
         @RenderBody()
         <hr />
