--- a/Telekomunikacije/Views/Account/RegisterInfo.cshtml
+++ b/Telekomunikacije/Views/Account/RegisterInfo.cshtml
@@ -5,10 +5,10 @@
 
 <h2>@ViewBag.Title.</h2>
 
-@using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+@using (Html.BeginForm("RegisterInfo", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
-    <h4>Create a new account.</h4>
+    <h4>Zavrsite Vas Profil</h4>
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
 
