--- a/Telekomunikacije/Views/Courses/Index.cshtml
+++ b/Telekomunikacije/Views/Courses/Index.cshtml
@@ -44,7 +44,7 @@
             <td>
                 @using (Html.BeginForm("Delete", "Courses", new { id = item.Id }))
                 {
-                    <input type="submit" value="Izbrisati Kurs" class="btn btn-primary" onclick="return confirm('Da li ste sigurni da zelite da izbrisete kurs @item.Name?'"/>
+                <button type="submit" class="btn btn-primary" onclick="return confirm('Da li ste sigurni da zelite da izbrisete kurs @item.Name?')">Izbrisati</button>
                 }
             </td>
 
@@ -70,7 +70,7 @@
             <td>
                 @using (Html.BeginForm("Delete", "Courses", new { id = item.Id }))
                 {
-                    <input type="submit" value="Izbrisati Kurs" class="btn btn-primary" onclick="return confirm('Da li ste sigurni da zelite da izbrisete kurs @item.Name?')" />
+                <button type="submit" class="btn btn-primary" onclick="return confirm('Da li ste sigurni da zelite da izbrisete kurs @item.Name?')">Izbrisati</button>
                 }
             </td>
 
@@ -97,7 +97,7 @@
             <td>
                 @using (Html.BeginForm("Delete", "Courses", new { id = item.Id }))
                 {
-                    <input type="submit" value="Izbrisati Kurs" class="btn btn-primary" onclick="return confirm('Da li ste sigurni da zelite da izbrisete kurs @item.Name?'" />
+                <button type="submit" class="btn btn-primary" onclick="return confirm('Da li ste sigurni da zelite da izbrisete kurs @item.Name?')">Izbrisati</button>
                 }
             </td>
 
