--- a/Telekomunikacije/Views/Members/RoleInfo.cshtml
+++ b/Telekomunikacije/Views/Members/RoleInfo.cshtml
@@ -7,11 +7,8 @@
 <h2>@Model.UserRoleViewModel.UserName</h2>
 <h3>Trenutne role korisnika @Model.UserRoleViewModel.UserName</h3>
 @using (Html.BeginForm("GetRoles", "Members"))
-{
-    @Html.HiddenFor(m => m.AllRoles)
+{    
     @Html.HiddenFor(m => m.UserRoleViewModel.Id)
-
-    @Html.HiddenFor(m => m.UserRoleViewModel.UserName)
     <button type="submit" class="btn btn-primary">Osvezi</button>
 }
 <ul>
@@ -24,24 +21,21 @@
 </ul>
 @using (Html.BeginForm("RoleAddToMember", "Members"))
 {
-    <div class="form-group">
-
-
-        @Html.DropDownList("Id", new SelectList(Model.AllRoles, "Id", "Name"), "Izaberi", new { @class = "form-control" })
-        @Html.HiddenFor(m => m.UserRoleViewModel.Id)
-    </div>
-
+<div class="form-group">
+    @Html.DropDownList("Id", new SelectList(Model.AllRoles, "Id", "Name"), "Izaberi", new { @class = "form-control" })
+    @Html.HiddenFor(m => m.UserRoleViewModel.Id)
+    @ViewBag.ResultMessage1
+</div>
     <button type="submit" class="btn btn-primary">Dodaj Rolu Korisniku</button>
 }
 
 @using (Html.BeginForm("DeleteRoleForMember", "Members"))
 {
-    <div class="form-group">
-
-
-        @Html.DropDownList("Id", new SelectList(Model.AllRoles, "Id", "Name"), "Izaberi", new { @class = "form-control" })
-        @Html.HiddenFor(m => m.UserRoleViewModel.Id)
-    </div>
+<div class="form-group">
+    @Html.DropDownList("Id", new SelectList(Model.AllRoles, "Id", "Name"), "Izaberi", new { @class = "form-control" })
+    @Html.HiddenFor(m => m.UserRoleViewModel.Id)
+    @ViewBag.ResultMessage2
+</div>
 
     <button type="submit" class="btn btn-primary">Ukloni Rolu</button>
 }
